--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600' rel='stylesheet' type='text/css'>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
 		<link href="/css/styles.css" rel="stylesheet">
+		<script type="text/javascript" src="/js/script.js" defer></script>
 		<style>
 			
 		</style>
@@ -24,31 +25,5 @@
 			<div id="ai_response" class="hidden"></div>
 		</div>
 
-		<script type="text/javascript">
-			document.getElementById('loadChat').addEventListener('click', async (ev) => {
-				ev.preventDefault();
-
-				let input = document.getElementById('ai_input').value;
-
-				document.getElementById('loadChat').disabled = true;
-				document.getElementById('loadChat').value = 'Submitted...';
-
-				document.getElementById('ai_response').classList.remove('hidden');
-				document.getElementById('ai_response').innerText = 'Thinking...';
-
-				fetch('/chat', {
-					method: 'POST',
-					headers: {
-						'Content-Type': 'application/json',
-					},
-					body: JSON.stringify({ 'ai_input': input  })
-				}).then(response => response.json()).then(response => {
-					console.log(response);
-					document.getElementById('ai_response').innerText = response.ai_output;
-					document.getElementById('loadChat').disabled = false;
-					document.getElementById('loadChat').value = 'Load ChatGPT Response';
-				});
-			});
-		</script>
 	</body>
 </html>
