clean up look and feel

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,12 +6,14 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
 		<link href="/css/styles.css" rel="stylesheet">
 		<script type="text/javascript" src="/js/script.js" defer></script>
+		<link rel="icon" type="image/x-icon" href="/images/android-chrome-192x192.png" />
 		<style>
 			
 		</style>
 	</head>
 	<body>
 		<div class="testbox">
+			<div id="logo"><img src="/images/logo.png" alt="Make Startups Logo"></div>
 			<form action="#" id="ai_form">
 				<h1>ChatGPT AI Starter Kit</h1>
 				<p>This Express app provides a simple interface to experiment with ChatGPT and build new applications. Consider this a "playground" for development.</p>
