--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,6 +1,6 @@
 html, body {
 	min-height: 100%;
-	background-color: #575757;
+	background-color: #353535;
 	padding: 12px;
 }
 body, div, form, input, p { 
@@ -106,4 +106,13 @@ button:hover {
 }
 .hidden {
 	display: none;
+}
+
+#logo {
+	margin-top: 12px;
+	margin-bottom: 12px;
+}
+
+#logo img {
+	height: 192px;
 }
